--- a/try.html
+++ b/try.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-<meta name="description" content="Bootsrtap and jQuery is more much less than my library - Be smarter than others">
+    <meta name="author" content="Molnár István || Мельник Степан || Stephan Miller">
+    <meta name="keywords" content="HTML,CSS,JavaScript,fast,load,trick,converter,math,calc,design,magic,logic,function,array,var,variable,object,entertainment,smart,quick">
+<meta name="description" content="Bootsrtap and jQuery is more much less than my library - Be smarter than each others">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000">
     <title>Безлимитный скрипт - Limitless script / test page</title>
   </head>
   <body>
-    
+    <h1 align="center">Sample HTML.
+      <br>
+      Try me here!</h1>
   </body>
 </html>
