--- a/try.html
+++ b/try.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="author" content="Molnár István || Мельник Степан || Stephan Miller">
-    <meta name="keywords" content="HTML,CSS,JavaScript,fast,load,trick,converter,math,calc,design,magic,logic,function,array,var,variable,object,entertainment,smart,quick">
+    <meta name="keywords" content="HTML,CSS,JavaScript,fast,load,trick,converter,math,calc,design,magic,logic,function,array,var,variable,object,entertainment,smart,quick,auto,automatic">
 <meta name="description" content="Bootsrtap and jQuery is more much less than my library - Be smarter than each others">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
